--- a/TemplateProject.vcxproj.filters
+++ b/TemplateProject.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="cwc\source">
       <UniqueIdentifier>{e55042e6-effb-4fb3-a1fd-49eaaadf727e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src">
+      <UniqueIdentifier>{f7c75790-9632-4d94-bbef-a44f0c12e601}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="glew\include\Gl\glew.h">
@@ -70,6 +73,15 @@
       <Filter>cwc\include</Filter>
     </ClInclude>
     <ClInclude Include="glm.h" />
+    <ClInclude Include="Artificial.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="Natural.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="Objeto.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="glew\source\glew.c">
@@ -155,6 +167,15 @@
     </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="glm.cpp" />
+    <ClCompile Include="Artificial.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="Natural.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="Objeto.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="freeglut\source\freeglutdll.def">
